--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week8">Week 8</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week9">Week 9</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -634,6 +637,8 @@
           <a href="https://medium.com/@yoshimlutfi/account-take-over-with-http-pollution-attack-at-reset-password-functionality-9f683bc0bdd" target="_blank">Account Take Over with HTTP Pollution Attack at Reset Password Functionality</a> : yoshi m lutfi <br><br>
         </p>
         <br><br>
+        <br><br>
+        <h2 id="week9">Week 9</h2><br>
         <h3>Day 61: Dec 8 2021</h3><br>
         <p>
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
@@ -710,6 +715,26 @@
           <a href="https://prajwalkewat.medium.com/1-my-bug-bounty-journey-frist-bounty-with-100-825e7be86ada" target="_blank">#1 My Bug Bounty Journey (First)</a> : Prajwal <br><br>
           <a href="https://medium.com/@xcfour/password-requirement-bypass-on-adding-phone-number-cf2c24bcd315" target="_blank">Password requirement Bypass on adding Phone Number</a> : Abhinav Gaur <br><br>
           <a href="https://medium.com/techiepedia/how-i-made-united-nations-hall-of-fame-in-3-minutes-b5c87a42c0ee" target="_blank">How I made the United Nations Hall of Fame in 3 minutes</a> : Renganathan <br><br>
+          <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
+          <a href="https://tryhackme.com/room/jason" target="_blank">Jason</a> : TryHackMe <br><br>
+          <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+        </p>
+        <br><br>
+        <h3>Day 67: Dec 14 2021</h3>
+        <p>
+          <a href="https://medium.com/@joshuaspeshock/how-to-be-prepared-for-a-cyber-attack-be41426b3c15">How To Be Prepared For A Cyber Attack?</a> : Joshua Speshock <br><br>
+          <a href="https://www.crowdstrike.com/cybersecurity-101/mitre-attack-framework/" target="_blank">MITRE ATT&CK FRAMEWORK</a> : CrowdStrike <br><br>
+          <a href="https://infosecwriteups.com/bug-bounty-response-manipulation-leading-to-payment-bypass-cb5fde360b1a" target="_blank">Bug bounty: Payment bypass using Response manipulation</a> : Krishnadev P Melevila <br><br>
+          <a href="https://karanxarora.medium.com/using-twitter-as-a-bug-bounty-hunter-bb0e86eea2ee" target="_blank">Using Twitter as a Bug Bounty Hunter</a> : Karan Arora <br><br>
+          <a href="https://infosecwriteups.com/5-most-effective-ways-of-learning-in-bug-bounty-afaf097f4df1" target="_blank">5 Most Effective Ways of Learning in Bug Bounty</a> : Karan Arora <br><br>
+          <a href="https://prashantbhatkal2000.medium.com/svg-based-stored-xss-ee6e9b240dee" target="_blank">SVG based Stored XSS</a> : xaonan44 <br><br>
+          <a href="https://medium.com/@vikramroot/account-takeover-via-stored-xss-b774f7a2a3ab" target="_blank">Account takeover via stored xss</a> : vikram naidu <br><br>
+          <a href="https://vinayakpatil0796.medium.com/my-first-blog-thats-how-i-bypass-email-verification-b4bb6a257878" target="_blank">My First Blog : That’s How I bypass Email Verification</a> : Vinayak Patil <br><br>
+          <a href="https://shahjerry33.medium.com/open-redirection-qr-code-magic-18ace1a0170f" target="_blank">Open Redirection - QR Code Magic</a> : Jerry Shah (Jerry) <br><br>
+          <a href="https://ethicalkaps.medium.com/exploiting-jwt-to-account-takeover-407b587b6cc6" target="_blank">Exploiting JWT to Account Takeover</a> : Ethical Kaps <br><br>
+          <a href="https://hunter-55.medium.com/account-takeover-story-of-2-same-issues-in-a-single-program-but-different-sub-domains-in-10-minutes-840b2701db91" target="_blank">Account Takeover — Story of 2 same issues in a single program but different sub-domains.</a> : himanshu pdy <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering For Everyone!</a> : @mytechnotalent
+          <a href="https://www.youtube.com/watch?v=LnBT1qubCnc&ab_channel=Alh4zr3d" target="_blank">Advent of Cyber Day 9: Packet Analysis with Wireshark</a> : Alh4zr3d <br><br>
           <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
           <a href="https://tryhackme.com/room/jason" target="_blank">Jason</a> : TryHackMe <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
