--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -48,6 +48,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week9">Week 9</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week10">Week 10</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -718,6 +721,7 @@
           <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
           <a href="https://tryhackme.com/room/jason" target="_blank">Jason</a> : TryHackMe <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
         </p>
         <br><br>
         <h3>Day 67: Dec 14 2021</h3>
@@ -738,8 +742,26 @@
           <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
           <a href="https://tryhackme.com/room/jason" target="_blank">Jason</a> : TryHackMe <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
         </p>
+        <br><br>
+        <h2 id="week10">Week 10</h2><br>
         <p>Copyright © 2021 Aditya Dindi</p>
+        <h3>Day 61: Dec 8 2021</h3><br>
+        <p>
+          <a href="https://tuhin1729.medium.com/log4shell-zero-day-exploit-full-guide-3a505f0c4248" target="_blank">Log4shell Zero Day Exploit— Full Guide</a> : Tuhin Bose <br><br>
+          <a href="https://infosecwriteups.com/how-i-found-multiple-sql-injection-with-ffuf-and-sqlmap-in-a-few-minutes-2824cd4dfab" target="_blank">How I Found multiple SQL Injection with FFUF and Sqlmap in a few minutes</a> : Mahmoud Youssef <br><br>
+          <a href="https://infosecwriteups.com/how-i-offered-free-1-lakh-rupees-through-government-website-6c10e16130fc" target="_blank">How I Offered Free 1 Lakh Rupees Through Government Website?</a> : Krishnadev P Melevila <br><br>
+          <a href="https://sagarsajeev.medium.com/sensitive-data-exposure-via-403-forbidden-bypass-df9b4dcd0fd" target="_blank">Sensitive Data Exposure via 403 Forbidden Bypass</a> : Sagar Sajeev <br><br>
+          <a href="https://vijetareigns.medium.com/forced-browsing-to-access-admin-panel-214a7defa2a5" target="_blank">Forced Browsing to Access Admin Panel</a> : the_unluck_guy <br><br>
+          <a href="https://haox-hapot.medium.com/the-5-minute-5-step-ways-to-exploit-smtp-c598d2cc167e" target="_blank">The 5-Minute, 5-Step ways to exploit SMTP</a> : Haox <br><br>
+          <a href="https://guyinatuxedo.github.io/index.html" target="_blank">Nightmare - Reverse Engineering</a> <br><br>
+          <a href="https://p.ost2.fyi/courses/course-v1:OpenSecurityTraining2+Arch1001_x86-64_Asm+2021_v1/about" target="_blank">x86_64 Course</a> <br><br>
+          <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
+          <a href="https://tryhackme.com/room/couchdb" target="_blank">Couchdb</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://www.linkedin.com/learning/" target="_blank">Security+ Complete Course</a> Linkedln Learning <br><br>
+        </p>
       </div> 
     </div>
   </center>
