--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -747,7 +747,7 @@
         <br><br>
         <h2 id="week10">Week 10</h2><br>
         <p>Copyright © 2021 Aditya Dindi</p>
-        <h3>Day 61: Dec 8 2021</h3><br>
+        <h3>Day 68: Dec 15 2021</h3><br>
         <p>
           <a href="https://tuhin1729.medium.com/log4shell-zero-day-exploit-full-guide-3a505f0c4248" target="_blank">Log4shell Zero Day Exploit— Full Guide</a> : Tuhin Bose <br><br>
           <a href="https://infosecwriteups.com/how-i-found-multiple-sql-injection-with-ffuf-and-sqlmap-in-a-few-minutes-2824cd4dfab" target="_blank">How I Found multiple SQL Injection with FFUF and Sqlmap in a few minutes</a> : Mahmoud Youssef <br><br>
@@ -761,6 +761,71 @@
           <a href="https://tryhackme.com/room/couchdb" target="_blank">Couchdb</a> : TryHackMe <br><br>
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
           <a href="https://www.linkedin.com/learning/" target="_blank">Security+ Complete Course</a> Linkedln Learning <br><br>
+        </p>
+        <br><br>
+        <h3>Day 69: Dec 16 2021</h3><br>
+        <p>
+          <a href="https://spoofing.medium.com/account-takeover-using-update-password-functionality-weak-password-policy-ab5190bc3827" target="_blank">Account Takeover using Update Password functionality + Weak Password Policy</a> : Aditya Nama <br><br>
+          <a href="https://medium.com/@noobdog/how-i-accidentally-found-my-first-bug-d068ac259e6f" target="_blank">How I accidentally found my first bug</a> : noobdog <br><br>
+          <a href="https://marxchryz.medium.com/how-i-found-multiple-xss-in-hidden-legacy-pages-a57a25d8ff1f" target="_blank">How I Found Multiple XSS in Hidden Legacy Pages</a> : Marx Chryz Del Mundo <br><br>
+          <a href="https://marxchryz.medium.com/how-i-gain-access-to-the-server-administration-of-a-million-dollar-company-14da68c7a9dd" target="_blank">How I Gain Access to the Server Administration of a Million-Dollar Company</a> : Marx Chryz Del Mundo <br><br>
+          <a href="https://marxchryz.medium.com/my-bug-bounty-journey-and-my-first-critical-bug-time-based-blind-sql-injection-aa91d8276e41" target="_blank">My Bug Bounty Journey and My First Critical Bug — Time Based Blind SQL Injection</a> : Marx Chryz Del Mundo <br><br>
+          <a href="https://medium.com/@saneem7/csrf-to-one-tray-red-bull-6564cd884a47" target="_blank">CSRF to one tray Red-bull</a> : Mohammed Saneem <br><br>
+          <a href="https://thevillagehacker.medium.com/api-security-misconfiguration-leads-to-tons-of-pii-data-leakage-fc57f1b9228" target="_blank">API Security Misconfiguration Leads to tons of PII data Leakage</a> : Naveen J <br><br>
+          <a href="https://medium.com/techiepedia/2f-authentication-bypass-in-sign-up-page-c738de3a1a4c" target="_blank">2F-Authentication Bypass in Sign-up Page</a> : C M UPPIN <br><br>
+          <a href="https://infosecwriteups.com/accidental-bug-leads-to-google-honorable-mentions-7dad9eecbd7f" target="_blank">Accidental Bug leads to google honorable-mentions</a> : Ramalingasamy <br><br>
+          <a href="https://medium.com/@snoopysec1337/bug-bounty-journey-web-parameter-tampering-b10032887e2b" target="_blank">Bug Bounty Journey: Web Parameter Tampering</a> : Sn00py <br><br>
+          <a href="https://infosecwriteups.com/where-you-can-lookout-for-idors-644fbed6ee09" target="_blank">Where you can lookout for : IDOR’s</a> : Ethical Kaps <br><br>
+          <a href="https://puri.sm/posts/primer-to-reverse-engineering/" target="_blank">A Primer Guide to Reverse Engineering</a> : Purism <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
+        <h3>Day 70: Dec 17 2021</h3><br>
+        <p>
+          <a href="https://infosecwriteups.com/my-cve-2021-45043-lfi-write-up-441dad30dd7f" target="_blank">My [CVE-2021-45043] LFI Write-up</a> Momen Ali (Cyber Guy) <br><br>
+          <a href="https://m7-arman.medium.com/zero-click-to-account-takeover-d764e12bee4b" target="_blank">Zero Click To Account Takeover</a> : M7.Arman <br><br>
+          <a href="https://medium.com/@Sm9l/bug-bounty-recon-horizontal-correlation-b7c81a32951a" target="_blank">Bug Bounty Recon: Horizontal Correlation.</a> : Sm9l <br><br>
+          <a href="https://abhishekgk.medium.com/my-first-critical-bug-d810b3e5f3e5" target="_blank">My first Critical Bug</a> : Abhishekgk <br><br>
+          <a href="https://medium.com/techiepedia/how-i-was-able-to-takeover-any-account-on-foxit-com-7a08efa0144f" target="_blank">How I was able to Takeover Accounts on Foxit.com</a> : Jefferson Gonzales <br><br>
+          <a href="https://medium.com/@thehemdeep/email-validation-bypass-7a0c6ec2889c" target="_blank">Email Validation Bypass</a> : Hemdeep Gamit <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+        </p>
+        <br><br>
+        <h3>Day 71: Dec 18 2021</h3><br>
+        <p>
+          <a href="https://infosecwriteups.com/reflected-xss-triggered-in-url-d4048a1da6bb" target="_blank">Reflected xss triggered in URL 🔎</a> : Shreya Talukdar <br><br>
+          <a href="https://infosecwriteups.com/open-redirect-in-target-via-google-sign-in-d42b3cb633d" target="_blank">Open redirect in target via google sign in</a> : Shreya Talukdar <br><br>
+          <a href="https://infosecwriteups.com/log4j-zero-day-vulnerability-exploitation-detection-mitigation-9667908857b4" target="_blank">Log4j zero-day vulnerability : Exploitation, Detection & Mitigation</a> : Pratinav Chandra <br><br>
+          <a href="https://srlsec.medium.com/account-takeover-by-otp-bypass-97b42400bfdc" target="_blank">Account Takeover by OTP Bypass</a> : Sarathlal Srl 🇮🇳 <br><br>
+          <a href="https://yashswarup12.medium.com/how-the-use-of-hidden-form-fields-lead-to-email-verification-bypass-3c8d7c25bd31" target="_blank">How the use of hidden form fields lead to Email verification bypass</a> : Yash Swarup <br><br>
+          <a href="https://medium.com/techiepedia/how-i-hacked-gmail-from-a-laravel-application-f1d11eb40ef8" target="_blank">How I hacked Gmail from a Laravel application?</a> : Krishnadev P Melevila <br><br>
+          <a href="https://ja1sharma.medium.com/bugbounty-idor-how-i-was-able-to-exfiltrate-any-users-credit-coupons-49631d9f3bc8" target="_blank">~/BugBounty/IDOR/”How I was able to exfiltrate any user’s credit coupons”</a> : Jai Sharma <br><br>
+          <a href="https://medium.com/@shubhayumajumdar/idor-leads-to-mass-account-takeover-9078e6b04ce" target="_blank">IDOR leads to Mass Account Takeover!</a> : Shubhayu Majumdar <br><br>
+          <a href="https://medium.com/@thehemdeep/pre-authentication-account-take-over-433764751cce" target="_blank">Pre-Authentication Account Take-Over</a> : Hemdeep Gamit <br><br>
+          <a href="https://www.youtube.com/watch?v=FLIDaavQ9aM&ab_channel=Alh4zr3d" target="_blank">Advent of Cyber Day 16: OSINT</a> : Alh4zr3d <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+        </p>
+        <h3>Day 72: Dec 19 2021</h3><br>
+        <p>
+          <a href="https://fardeen-ahmed.medium.com/how-i-was-able-to-get-appreciation-from-the-organization-of-a-website-just-by-changing-a-sign-661042c97a98">How i was able to get Appreciation from the organization of a website just by changing a sign..!!!</a> : Fardeen Ahmed <br><br>
+          <a href="https://0xy37.medium.com/attacking-wireless-network-wifi-hacking-3f1639146cf0" target="_blank">Attacking Wireless network - WiFi Hacking</a> : Yara AlHumaidan (0xy37) <br><br>
+          <a href="https://0xjoyghosh.medium.com/finding-and-exploiting-icontrol-rest-unauthenticated-rce-cve-2021-22986-5295a3fd1890" target="_blank">Finding and exploiting iControl REST unauthenticated RCE[ CVE-2021–22986 ]</a> : Joy Ghosh <br><br>
+          <a href="https://rejinoldpearson.medium.com/beginners-bug-bounty-automation-a92706c8013f" target="_blank">Beginners Bug Bounty Automation</a> : Rejinold Pearson <br><br>
+          <a href="https://medium.com/@varmaanu001/easy-premium-account-access-and-admin-role-escalation-via-object-manipulation-in-the-server-619d325ab66" target="_blank">Easy Premium Account Access and Admin role escalation via Object manipulation in the server response</a> : Anurag__Verma <br><br>
+          <a href="https://faizannehal.medium.com/how-you-can-escalate-a-simple-html-injection-into-a-critical-ssrf-8cd754e1a114" target="_blank">How You Can Escalate a Simple HTML Injection Into a Critical SSRF</a> : Faizan Nehal <br><br>
+          <a href="https://marxchryz.medium.com/price-manipulation-bypass-using-integer-overflow-method-36ff23ebe91d" target="_blank">Price Manipulation Bypass Using Integer Overflow Method</a> : Marx Chryz Del Mundo <br><br>
+          <a href="https://infosecwriteups.com/information-disclosure-via-api-misconfiguration-c05ed327f9d2" target="_blank">Information disclosure via api misconfiguration</a> : Rizwan_siddiqui <br><br>
+          <a href="https://medium.com/@pr0fessor/intigritis-october-challenge-writeup-8445e864e245" target="_blank">Intigritis October challenge Writeup</a> : pr0fessor <br><br>
+          <a href="https://sm4rty.medium.com/stored-xss-via-invite-leading-to-mass-account-takeover-at-opera-a85ed257dd12" target="_blank">Stored XSS via Invite leading to Mass Account Takeover at Opera.</a> : Sm4rty <br><br>
+          <a href="https://noob3xploiter.medium.com/broken-access-control-bug-bypassing-403s-by-finding-another-endpoint-that-do-the-same-thing-b5238386ce58" target="_blank">Broken Access control bug : Bypassing 403’s by finding another endpoint that do the same thing.</a> : Brandon Roldan <br><br>
+          <a href="https://medium.com/@varmaanu001/cookie-stealing-via-clickjacking-using-burp-collaborator-ff6f4ac1c18b" target="_blank">Cookie Stealing via Clickjacking using Burp collaborator</a> : Anurag__Verma <br><br>
+          <a href="https://srlsec.medium.com/removing-request-parameter-to-bypass-otp-verification-75a5779dffb8" target="_blank">Removing request parameter to Bypass OTP verification</a> : Sarathlal Srl 🇮🇳 <br><br>
+          <a href="https://medium.com/@abdallah_0x0a/account-takeover-via-password-reset-poisoning-2ec02a9f59eb" target="_blank">Account Takeover via Password Reset Poisoning</a> : abdallah <br><br>
+          <a href="https://medium.com/techiepedia/guide-to-bug-bounty-hunting-dd5607142f78" target="_blank">Guide to Bug Bounty Hunting</a> : Aman Mulla <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+          <a href="https://tryhackme.com/room/wonderland" target="_blank">Wonderland</a> : TryHackMe <br><br>
         </p>
       </div> 
     </div>
