--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -746,7 +746,6 @@
         </p>
         <br><br>
         <h2 id="week10">Week 10</h2><br>
-        <p>Copyright © 2021 Aditya Dindi</p>
         <h3>Day 68: Dec 15 2021</h3><br>
         <p>
           <a href="https://tuhin1729.medium.com/log4shell-zero-day-exploit-full-guide-3a505f0c4248" target="_blank">Log4shell Zero Day Exploit— Full Guide</a> : Tuhin Bose <br><br>
@@ -827,6 +826,23 @@
           <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
           <a href="https://tryhackme.com/room/wonderland" target="_blank">Wonderland</a> : TryHackMe <br><br>
         </p>
+        <br><br>
+        <h3>Day 73: Dec 20 2021</h3><br>
+        <p>Break Day</p>
+        <br><br>
+        <h3>Day 74: Dec 21 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@bhavyachanana/bug-bounty-and-reporting-88493747a9db" target="_blank">Bug bounty and Reporting</a> : Bhavya Chanana <br><br>
+          <a href="https://krishnadevpmelevila.medium.com/leaked-database-of-cgg-website-govt-bug-critical-c0c4a418768b" target="_blank">Leaked Database of CGG Website: GOVT- BUG (CRITICAL)</a> : Krishnadev P Melevila <br><br>
+          <a href="https://gokul4831.medium.com/subdomain-takeover-overview-2def8bca8592" target="_blank">Subdomain takeover- Overview</a> : gokul GV <br><br>
+          <a href="https://medium.com/@prithvir3ddy/local-file-intrusion-attack-916e6b1a75c7" target="_blank">Local File Intrusion Attack</a> : PrithiviReddy <br><br>
+          <a href="https://v3d.medium.com/broken-access-control-leads-to-change-of-admin-details-a783e31729c4" target="_blank">BROKEN ACCESS CONTROL LEADS TO CHANGE OF ADMIN DETAILS</a> : V3D <br><br>
+          <a href="https://vikaran101.medium.com/how-i-hacked-into-one-of-indias-biggest-online-book-stores-rce-and-more-887ef6460935" target="_blank">How I hacked into one of India’s biggest online book stores(RCE and more)</a> : Vikaran <br><br>
+          <a href="https://medium.com/techiepedia/how-i-got-a-widget-dev-access-of-site-because-of-improper-authorization-e80bb65c59c7" target="_blank">How I got a Widget-Dev access of site because of improper authorization</a> : Aadeshnamdev <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
+        <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
   </center>
