--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -842,6 +842,9 @@
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
         </p>
         <br><br>
+        <h3>Day 75: Dec 22 2021 - Day 76: Dec 23 2021</h3><br>
+        <p>Break Days</p>
+        <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
