--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -51,6 +51,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week10">Week 10</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week11">Week 11</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -842,9 +845,27 @@
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
         </p>
         <br><br>
+        <h2 id="week11">Week 11</h2><br>
         <h3>Day 75: Dec 22 2021 - Day 76: Dec 23 2021</h3><br>
         <p>Break Days</p>
         <br><br>
+        <h3>Day 74: Dec 21 2021</h3><br>
+        <p>
+          Setting Up Home Lab , Guide: <a href="https://www.cyberwoxacademy.com/post/building-a-cybersecurity-homelab" target="_blank">Building a CyberSecurity Homelab</a> : Cyberwox Academy <br><br>
+          <a href="https://medium.com/@alp0x01/information-disclosure-via-external-live-chat-service-416c1b525276" target="_blank">Information Disclosure via External Live Chat Service</a> Alp <br><br>
+          <a href="https://dhivishvarshan.medium.com/subdomain-takeover-fb9a0bc67e6" target="_blank">Subdomain Takeover</a> : DivishVarshan <br><br>
+          <a href="https://zaidmessi.medium.com/ftp-vulnerability-allows-to-expose-all-confidential-files-of-government-website-43e653ba213a" target="_blank">FTP vulnerability allows to expose all confidential files of government website</a> : ZaidMessi <br><br>
+          <a href="https://medium.com/@nub_error/a-unique-email-verification-bypass-6688e173a20c" target="_blank">A Unique Email Verification Bypass</a> : Nub Error <br><br>
+          <a href="https://febinrev.medium.com/how-i-got-rewarded-with-a-telescope-from-celestron-one-of-the-worlds-leading-telescope-ae4c82f09353" target="_blank">How I got rewarded with a Telescope from Celestron, one of the world’s leading telescope manufacturers.</a> : Febin <br><br>
+          <a href="https://febinrev.medium.com/how-i-hacked-into-my-neighbors-wi-fi-network-334a2193c32b" target="_blank">How I Hacked into my neighbor’s Wi-Fi Network</a> : Febin <br><br>
+          <a href="https://infosecwriteups.com/logical-flaw-resulting-path-hijacking-dd4d1e1e832f" target="_blank">Logical Flaw Resulting Path Hijacking</a> : Veshraj Ghimire <br><br>
+          <a href="https://medium.com/@kaorrosi/finding-and-exploiting-ssrf-vulnerabilities-22006dc739ce" target="_blank">Finding and Exploiting SSRF Vulnerabilities</a> : Kaorrosi <br><br>
+          <a href="https://codewithvamp.medium.com/bug-type-stored-cross-site-scripting-xss-and-html-injection-cbe3d7daab79" target="_blank">Bug type: Stored Cross Site Scripting (XSS) and HTML Injection.</a> : Vaibhav Kumar Srivastava <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
+          <a href="https://tryhackme.com/room/anonymous" target="_blank">Anonymous</a> : TryHackMe <br><br>
+          <a href="https://www.linkedin.com/learning/" target="_blank">Security+ Complete Course</a> Linkedln Learning <br><br>
+        </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
