--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -12,6 +12,7 @@
     <title>Aditya's Personal Site</title>
     <link rel="icon" href="/img/detective.png">
   </head>
+  <section class="container"></section>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
