--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -867,6 +867,22 @@
           <a href="https://tryhackme.com/room/anonymous" target="_blank">Anonymous</a> : TryHackMe <br><br>
           <a href="https://www.linkedin.com/learning/" target="_blank">Security+ Complete Course</a> Linkedln Learning <br><br>
         </p>
+        <br><br>
+        <h3>Day 78: Dec 25 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@alp0x01/how-i-found-a-idor-issue-in-5-mins-2c6a2805c08c" target="_blank">How I found an IDOR issue in 5 mins?</a> : Alp <br></br>
+          <a href="https://ahmdhalabi.medium.com/ultimate-reconnaissance-roadmap-for-bug-bounty-hunters-pentesters-507c9a5374d" target="_blank">Ultimate Reconnaissance RoadMap for Bug Bounty Hunters & Pentesters</a> : Ahmad Halabi <br><br>
+          <a href="https://infosecwriteups.com/my-bug-bounty-journey-ranking-1st-in-u-s-dod-achieving-top-100-hackers-in-1-year-f208c10144fc" target="_blank">My Bug Bounty Journey & Ranking 1st in U.S. DoD & Achieving top 100 hackers in 1 year</a> Ahmad Halabi <br><br>
+          <a href="https://ahmdhalabi.medium.com/my-experience-for-2-years-in-bug-bounty-hunting-b22d03f98ed3" target="_blank">My Experience For 2 Years In Bug Bounty Hunting</a> Ahmad Halabi <br><br>
+          <a href="https://psfauzi.medium.com/how-i-get-1350-from-idor-just-less-1-hours-7496bab1a914" target="_blank">How I Get $1350 From IDOR Just Less 1 hours</a> : Fauzi Bariq Mahya <br><br>
+          <a href="https://medium.com/@nithissh/a-story-of-default-wordlist-in-dirsearch-to-20k-inr-bounty-8b788bc5c70b" target="_blank">A story of Default wordlist in Dirsearch to 20k INR Bounty</a> : Nithissh <br><br>
+          <a href="https://medium.com/@daudmalik06/how-i-bypassed-incapsula-waf-db0498b3a021" target="_blank">How I Bypassed Incapsula WAF By Imperva</a> : Dawood Ikhlaq <br><br>
+          <a href="https://shahjerry33.medium.com/business-logic-errors-must-vote-68f642b60fb7" target="_blank">Business Logic Errors - Must Vote</a> : Jerry Shah (Jerry) <br><br>
+          <a href="https://levelup.gitconnected.com/stealing-user-information-via-xss-via-parameter-pollution-7d99b3379e7d" target="_blank">Stealing User Information Via XSS Via Parameter Pollution</a> Hamza Avvan <br><br>
+          <a href="https://notifybugme.medium.com/chaining-csrf-with-xss-to-deactivate-mass-user-accounts-by-single-click-b463c0d26587" target="_blank">Chaining CSRF with XSS to deactivate Mass user accounts by single click</a> : Santosh Kumar Sha (@killmongar1996) <br><br>
+          <a href="https://medium.com/edviconedu/how-to-use-burp-suite-professional-for-free-4a9b2f177ec2" target="_blank">How To Use Burp Suite Professional For Free?</a> : Umang Thakkar <br><br>
+          
+        </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
