--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -885,6 +885,24 @@
           <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
           <a href="https://tryhackme.com/room/dogcat" target="_blank">dogcat</a> : TryHackMe <br><br>
         </p>
+        <br><br>
+        <h3>Day 79: Dec 26 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@hardeepsinghsandhu537/cross-site-request-forgery-csrf-eb6c6b28fc2a" target="_blank">Cross-Site Request Forgery — CSRF</a> Hardeep Singh Sandhu <br><br>
+          <a href="https://medium.com/@jagannathrajput2003/my-first-valid-bug-of-hackerone-2fab84e05a2c" target="_blank">My first valid bug of hackerone</a> : Jagannathrajput <br><br>
+          <a href="https://saeeds.medium.com/blackbox-cookie-testing-how-i-cracked-the-admins-cookie-c817dd4281c8" target="_blank">Blackbox Cookie Testing — How I Cracked The Admin’s Cookie</a> : Saeed Balquizi <br><br>
+          <a href="https://saeeds.medium.com/pivoting-like-a-pro-d5a16630e300" target="_blank">Pivoting like a Pro</a> : Saeed Balquizi <br><br>
+          <a href="https://saeeds.medium.com/my-oscp-2020-journey-from-the-cloud-b47510806bb7" target="_blank">My OSCP 2020 Journey from the cloud</a> : Saeed Balquizi <br><br>
+          <a href="https://gonzx.medium.com/how-i-escalate-my-self-stored-xss-to-account-takeover-with-the-help-of-idor-f20733ecdbe9" target="_blank">How I escalate my Self-Stored XSS to Account Takeover with the help of IDOR</a> : Jefferson Gonzales <br><br>
+          <a href="https://medium.com/@mohammadowais616/bypassing-domain-validation-955b83787713" target="_blank">Bypassing domain validation</a> : Mohammad Owais <br><br>
+          <a href="https://y0sum3x.medium.com/remember-these-xss-days-6a950073cb55" target="_blank">Remember These XSS Days?</a> : Calogero Joseph <br><br>
+          <a href="https://medium.com/@hardeepsinghsandhu537/reflected-xss-hardeepsing-af647af48186" target="_blank">Reflected XSS — Hardeepsinghsandhu537</a> : Hardeep Singh Sandhu <br><br>
+          <a href="https://tryhackme.com/room/mitre" target="_blank">MITRE</a> <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
+          <a href="https://p.ost2.fyi/dashboard" target="_blank">Reverse Enginnering Course</a> : OST2.FY1 <br><br>
+        </p>
+        <br><br>
+        <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
