--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -902,6 +902,39 @@
           <a href="https://p.ost2.fyi/dashboard" target="_blank">Reverse Enginnering Course</a> : OST2.FY1 <br><br>
         </p>
         <br><br>
+        <h3>Day 80: Dec 27 2021</h3><br>
+        <p>
+          <a href="https://sahildari.medium.com/easiest-critical-bug-triaged-on-hackerone-f84bb4c9266" target="_blank">Easiest Critical Bug triaged on HackerOne</a> : Sahil Dari <br><br>
+          <a href="https://infosecwriteups.com/p1-easy-access-to-grafana-dashboard-9b7df82329b6" target="_blank">P1: Easy Access to Grafana Dashboard</a> : Mahendra Purbia (Mah3Sec_) <br><br>
+          <a href="https://bhanuprathapreddy1.medium.com/gathering-information-from-the-photo-829fb83aae76" target="_blank">Gathering information from the Photo</a> : Bhanuprathap Reddy <br><br>
+          <a href="https://mshibilmp.medium.com/how-i-got-my-first-appreciation-f3f6c15cf87" target="_blank">How I got my first Acknowledgement ?!</a> : 5h1b1L <br><br>
+          <a href="https://medium.com/@karanrathore402/how-can-i-do-broken-link-hijacking-in-just-5-mintues-unique-technique-b548fd1a5dfd" target="_blank">How Can I Do Broken Link Hijacking In Just 5 Mintues(Unique Technique)?</a> : KaranJohar(BUG BOUNTY HUNTER) <br><br>
+          <a href="https://p.ost2.fyi/dashboard" target="_blank">Reverse Enginnering Course</a> : OST2.FY1 <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
+          <a href="https://tryhackme.com/room/dogcat" target="_blank">dogcat</a> : TryHackMe <br><br>
+          <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">InfosecPrep</a> : Offensive Security Proving Grounds (Play)
+        </p>
+        <br><br>
+        <h3>Day 81: Dec 28 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@noobdog/cross-site-request-forgery-csrf-vulnerabilities-b6203cea2d1" target="_blank">Cross Site Request Forgery(CSRF) Vulnerabilities</a> : noobdog <br><br>
+          <a href="https://notifybugme.medium.com/exposing-millions-of-investor-and-startup-register-details-and-pii-info-in-startupindia-govt-of-766ac6dfbec9" target="_blank">Exposing Millions of Investor and Startup Register details and PII INFO in STARTUPINDIA (Govt of INDIA).</a> : Santosh Kumar Sha (@killmongar1996) <br><br>
+          <a href="https://medium.com/@sirgoonythesecond/how-i-passed-the-oscp-with-zero-penetration-testing-experience-3ff54a0b5245" target="_blank">How I passed the OSCP with zero penetration testing experience.</a> : Sirgoonythesecond <br><br>
+          <a href="https://medium.com/@abhinda1996/privilege-escalation-private-program-bugcrowd-831a7eb58b6c" target="_blank">Abhind </a> : Privilege Escalation | stealing user’s point | Bugcrowd <br><br>
+          <a href="https://faiyazhacks.medium.com/how-i-got-my-second-swag-2fa08a1dfd39" target="_blank">HOW I GOT MY SECOND SWAG</a> : Faiyaz Ahmad <br><br>
+          <a href="https://systemweakness.com/information-disclosure-on-codepolitan-f7e014d8a7b6" target="_blank">Information Disclosure on CodePolitan</a> : Rifqi Hilmy Zhafrant <br><br>
+          <a href="https://leviwof.medium.com/linkshare-55b2c4e84f1" target="_blank">How can a simple tool help me with bug bounty?</a> : AL <br><br>
+          <a href="https://medium.com/dsc-sastra-deemed-to-be-university/prompt-ml-xss-challenge-1f265c572d4a" target="_blank">Prompt.ml XSS Challenge</a> : Kadhirravan R <br><br>
+          <a href="https://radianid.medium.com/chaining-open-redirect-with-xss-to-account-takeover-36acf218a6d5" target="_blank">Chaining Open Redirect with XSS to Account Takeover</a> : Radian ID <br><br>
+          <a href="https://tryhackme.com/room/boilerctf2" target="_blank">Boiler CTF</a> : TryHackMe <br><br>
+          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+          <a href="https://medium.com/@e13v3n/tryhackme-boiler-ctf-writeup-dd191210c02" target="_blank">TryHackMe — Boiler CTF Writeup</a> : Anushka Soni <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Katana</a> : Offensive Security Proving GRounds (Play) <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+          <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
+        </p>
+        <br><br>
         <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
