--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -935,6 +935,17 @@
           <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
         </p>
         <br><br>
+        <h3>Day 82: Dec 29 2021</h3><br>
+        <p>
+          <a href="https://infosecwriteups.com/how-i-bypassed-netflix-profile-lock-43901be1307c" target="_blank">How I Bypassed Netflix Profile Lock?</a> : Krishnadev P Melevila <br><br>
+          <a href="https://medium.com/immunefi/a-hackers-guide-to-submitting-bugs-on-immunefi-1e6b7ada71a9" target="_blank">A Hacker’s Guide to Submitting Bugs on Immunefi</a> : Immunefi <br><br>
+          <a href="https://medium.com/@onedirection07072002/what-the-bug-my-bug%C3%A9dex-journey-675529ed74d6" target="_blank">What The Bug- My Bugédex Journey.</a> : Ananyaa Gupta <br><br>
+          <a href="https://medium.com/@vflexo/cve-2021-38314-leads-to-sensitive-information-disclosure-6e822784034f" target="_blank">CVE-2021–38314 Leads to Sensitive Information Disclosure</a> : vFlexo <br><br>
+          <a href="https://0xelmalky.medium.com/subdomain-takeover-via-flywheel-447a71d77396" target="_blank">Subdomain Takeover Via Flywheel</a> : Ahmed Elmalky <br><br>
+          <a href="https://medium.com/@gblorso.peter/black-box-penetration-test-of-a-php-web-application-80875a1a849d" target="_blank">Black-box Penetration Test of a PHP Web Application</a> : Peter H. Gblorso <br><br>
+          
+        </p>
+        <br><br>
         <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
