--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="img/pyrus.jpg" class="img-fluid round"> <br>
         <h1>Aditya Dindi</h1> <br>
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
-        <p class="lead">I am a Cyber Security Student. I love reading mystery books 🕵️ and also watch Anime.</p> <br>
+        <p class="lead">I am a Cyber Security Student at the University of Texas at San Antonio </p> <br>
         <a class="btn btn-outline-light" href="WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a>
       </div> 
       <hr>
