--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -930,7 +930,8 @@
           <a href="https://tryhackme.com/room/boilerctf2" target="_blank">Boiler CTF</a> : TryHackMe <br><br>
           <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
           <a href="https://medium.com/@e13v3n/tryhackme-boiler-ctf-writeup-dd191210c02" target="_blank">TryHackMe — Boiler CTF Writeup</a> : Anushka Soni <br><br>
-          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Katana</a> : Offensive Security Proving GRounds (Play) <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Katana</a> : Offensive Security Proving Grounds (Play) <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
           <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
           <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
         </p>
@@ -943,7 +944,11 @@
           <a href="https://medium.com/@vflexo/cve-2021-38314-leads-to-sensitive-information-disclosure-6e822784034f" target="_blank">CVE-2021–38314 Leads to Sensitive Information Disclosure</a> : vFlexo <br><br>
           <a href="https://0xelmalky.medium.com/subdomain-takeover-via-flywheel-447a71d77396" target="_blank">Subdomain Takeover Via Flywheel</a> : Ahmed Elmalky <br><br>
           <a href="https://medium.com/@gblorso.peter/black-box-penetration-test-of-a-php-web-application-80875a1a849d" target="_blank">Black-box Penetration Test of a PHP Web Application</a> : Peter H. Gblorso <br><br>
-          
+          <a href="https://tryhackme.com/room/overpass3hosting" target="_blank">Overpass 3 - Hosting</a> : TryHackMe <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">SunsetNoontide</a> : Offensive Security Proving Grounds (Play) <br><br>
+          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+          <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
         </p>
         <br><br>
         <br><br>
